# ImageLabeler

./: .gitignore  CMakeLists.txt  README.md  annotationgraphicsview.cpp  annotationgraphicsview.h  classmanagerdialog.cpp  classmanagerdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  translations.qrc
translations/: label_en.qm  label_en.ts  label_zh.qm  label_zh.ts
